--- a/world-cup-main/style.css
+++ b/world-cup-main/style.css
@@ -73,16 +73,30 @@ p {
     height: 312px;
     padding: 30px;
     background-color: #161616;
+    border-radius: 10px;
+    padding-bottom: 0;
 
 
 }
 
-.buttton {
-    width: 252px;
-    height: 64px;
+.buttton {}
+
+.side0 {
+    width: 162px;
+    height: 452px;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
+}
+
+input {
+    width: 252px;
+    height: 64px;
+    border-radius: 10px;
+}
+
+.color {
+    background-color: #DD0000;
 }
 
 .side-div-2 {
