--- a/world-cup-main/style.css
+++ b/world-cup-main/style.css
@@ -84,7 +84,16 @@ p {
 
 }
 
-.buttton {}
+.buttton a {
+    font-size: 14px;
+    width: 120px;
+    height: 18px;
+    border-radius: 10px;
+    padding: 15px;
+    text-decoration: none;
+    background-color: #FFFFFF;
+    color: black;
+}
 
 .side0 {
     width: 162px;
@@ -113,7 +122,7 @@ input {
 
 .side-div-21 {
     width: 250px;
-    height: 320px;
+    height: 294px;
     border-radius: 5px;
     margin-right: 24px;
     margin-bottom: 10px;
@@ -133,7 +142,7 @@ input {
 
 .side-div-2 img {
     width: 250px;
-    height: 175px;
+    height: 150px;
     border-radius: 10px 10px 0px 0px;
     margin-bottom: 20px;
 }
@@ -171,4 +180,24 @@ hr {
     padding-top: 50px;
 
 
+}
+
+.imgs img {
+    width: 92px;
+    height: 56px;
+}
+
+.im-con {
+    width: 250px;
+    height: 180px;
+    padding-left: 11px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    padding-top: 11px;
+    border: 1px solid gray;
+    border-radius: 15px;
+}
+
+.center {
+    text-align: center;
 }
