--- a/world-cup-main/style.css
+++ b/world-cup-main/style.css
@@ -28,7 +28,9 @@ main {
 }
 
 .container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 50px;
     background-color: #161616;
     color: white;
     width: 1000px;
@@ -172,6 +174,13 @@ hr {
     align-items: center;
 }
 
+
+.icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .footerr2 {
     width: 80%;
     display: grid;
@@ -195,9 +204,39 @@ hr {
     margin-left: 10px;
     padding-top: 11px;
     border: 1px solid gray;
-    border-radius: 15px;
+    border-radius: 10px;
 }
+
 
 .center {
     text-align: center;
+}
+
+
+
+
+/* -------------------------------------
+             media query 
+---------------------------------------*/
+
+/* --------------------------------------
+            Tab view 
+----------------------------------------*/
+/* @media only screen and (max-width:834px) {
+    .container {
+        width: 100%;
+        height: 100%;
+    }
+
+
+
+} */
+
+@media only screen and (max-width:834px) {
+    .container {
+        width: 100%;
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+    }
+
 }
